# openSesh

./: .env  .env.example  PRD.md  README.md  package.json  pnpm-lock.yaml  setup.sh
adw/: .gitignore  HANDOFF.md  README.md  adw  chunker.ts  cli.ts  compile-validator.ts  config.ts  handoff-validator.ts  orchestrator.ts  package.json  paths.ts  state.ts  tsconfig.json  types.ts  worker.ts
adw/templates/: CONTEXT.md  HANDOFF.md  PROGRESS.md  WORKER_PROMPT.md
docs/: BUILD_LOG.md  DEVELOPMENT.md  HANDOFF.md
plans/: feat-adw-pipeline-dashboard.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: chat.rs  files.rs  git.rs  mod.rs  terminal.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs  types.rs
src-tauri/src/tools/: executor.rs  file_ops.rs  mod.rs  search.rs
src/components/changes/: FileApprovalActions.tsx  FileChangePreview.tsx  PendingChangesModal.tsx  PendingChangesPanel.tsx  index.ts
src/components/chat/: ChatInput.tsx  ChatPane.tsx  MessageBubble.tsx  MessageList.tsx  ModelSelector.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/diff/: CommitPanel.tsx  DiffPane.tsx  DiffViewer.tsx  FileTree.tsx
src/hooks/: useKeyboardShortcuts.ts  useTauri.ts  useTerminal.ts
src/lib/: tauri.ts  utils.ts
src/stores/: executionStore.ts  gitStore.ts  messageStore.ts  pendingChangesStore.ts  planStore.ts  projectStore.ts  settingsStore.ts  skillStore.ts  threadStore.ts  uiStore.ts
src/types/: execution.ts  index.ts  plan.ts  skills.ts
(+27 files in other folders)
